@@ -54,6 +54,15 @@ MIN|3|2|2
 MIN|1|3|
 MIN|2|3|2
 MIN|3|3|2
+RANGE|1|1|
+RANGE|2|1|
+RANGE|3|1|
+RANGE|1|2|
+RANGE|2|2|1
+RANGE|3|2|
+RANGE|1|3|
+RANGE|2|3|
+RANGE|3|3|
 SUM|1|1|1
 SUM|2|1|1
 SUM|3|1|
@@ -279,6 +288,42 @@ MIN|3|6|1
 MIN|4|6|1
 MIN|5|6|1
 MIN|6|6|1
+RANGE|1|1|
+RANGE|2|1|
+RANGE|3|1|
+RANGE|4|1|
+RANGE|5|1|
+RANGE|6|1|
+RANGE|1|2|
+RANGE|2|2|
+RANGE|3|2|
+RANGE|4|2|
+RANGE|5|2|
+RANGE|6|2|
+RANGE|1|3|
+RANGE|2|3|
+RANGE|3|3|
+RANGE|4|3|
+RANGE|5|3|
+RANGE|6|3|
+RANGE|1|4|
+RANGE|2|4|
+RANGE|3|4|
+RANGE|4|4|
+RANGE|5|4|
+RANGE|6|4|
+RANGE|1|5|
+RANGE|2|5|
+RANGE|3|5|
+RANGE|4|5|
+RANGE|5|5|
+RANGE|6|5|
+RANGE|1|6|
+RANGE|2|6|
+RANGE|3|6|
+RANGE|4|6|
+RANGE|5|6|
+RANGE|6|6|
 SUM|1|1|1
 SUM|2|1|1
 SUM|3|1|1
@@ -369,6 +414,15 @@ MIN|3|2|2
 MIN|1|3|
 MIN|2|3|2
 MIN|3|3|2
+RANGE|1|1|0
+RANGE|2|1|0
+RANGE|3|1|
+RANGE|1|2|0
+RANGE|2|2|1
+RANGE|3|2|0
+RANGE|1|3|
+RANGE|2|3|0
+RANGE|3|3|0
 SUM|1|1|1
 SUM|2|1|1
 SUM|3|1|
@@ -441,6 +495,15 @@ MIN|3|2|2
 MIN|1|3|
 MIN|2|3|2
 MIN|3|3|2
+RANGE|1|1|
+RANGE|2|1|
+RANGE|3|1|
+RANGE|1|2|
+RANGE|2|2|1
+RANGE|3|2|
+RANGE|1|3|
+RANGE|2|3|
+RANGE|3|3|
 SUM|1|1|1
 SUM|2|1|1
 SUM|3|1|
@@ -504,6 +567,15 @@ MIN|3|2|200
 MIN|1|3|
 MIN|2|3|200
 MIN|3|3|200
+RANGE|1|1|0
+RANGE|2|1|0
+RANGE|3|1|
+RANGE|1|2|0
+RANGE|2|2|100
+RANGE|3|2|0
+RANGE|1|3|
+RANGE|2|3|0
+RANGE|3|3|0
 SUM|1|1|100
 SUM|2|1|100
 SUM|3|1|
